# nasdaq_itch_ouch

./: CMakeLists.txt  README.md
include/: ouch.h  soup_bin_connection.h  soupbintcp.h
src/: soup_bin_connection.cpp
test/: CMakeLists.txt  soupbinserver.cpp  soupbintcp.cpp
